# AutoResumeFiller

./: .editorconfig  .env.example  .eslintrc.json  .gitignore  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  release.yml
backend/: main.py  requirements.txt
backend/config/: settings.py
backend/services/data/: __init__.py  data_exporter.py  file_parser.py  schemas.py  user_data_manager.py
backend/services/data/examples/: user_profile_example.json
backend/services/data/tests/: __init__.py  test_data_exporter.py  test_file_parser.py  test_schemas.py  test_user_data_manager.py
backend/tests/: README.md  conftest.py  test_main.py
docs/: architecture.md  epics.md  implementation-readiness-report-2025-11-28.md  implementation-readiness-update-2025-11-29.md  prd.md
docs/sprint-artifacts/: sprint-status.yaml  tech-spec-epic-1.md  tech-spec-epic-2.md  tech-spec-epic-3.md  tech-spec-epic-4.md  tech-spec-epic-5.md  tech-spec-epic-6.md  tech-spec-epic-7.md
docs/sprint-artifacts/stories/: story-1-5-ci-cd-pipeline-github-actions-CONTEXT.md  story-1-5-ci-cd-pipeline-github-actions.md  story-1-6-testing-infrastructure-first-unit-tests-CONTEXT.md  story-1-6-testing-infrastructure-first-unit-tests.md  story-1-7-development-environment-documentation-CONTEXT.md  story-1-7-development-environment-documentation.md  story-1.1-context.md  story-1.1-project-initialization-repository-setup.md  story-1.2-context.md  story-1.2-python-backend-scaffolding.md  story-1.3-chrome-extension-manifest-basic-structure.md  story-1.3-context.md  story-1.4-pyqt5-gui-application-shell-CONTEXT.md  story-1.4-pyqt5-gui-application-shell.md  story-2-1-data-schema-definition-json-structure.md  story-2-2-file-system-data-manager.md  story-2-3-resume-document-parser-pdf-docx.md  story-2-4-data-export-backup-functionality.md  story-2-5-multiple-resume-cover-letter-version-management.md  story-2-6-configuration-management-config-yaml.md  story-2-7-conversational-data-update-chatbot-backend.md  story-2-8-data-encryption-at-rest.md  story-3-1-ai-provider-abstract-base-class.md  story-3-2-openai-gpt-provider-implementation.md  story-3-3-anthropic-claude-provider-implementation.md  story-3-4-google-gemini-provider-implementation.md  story-3-5-ai-provider-factory-configuration.md  story-3-6-form-question-analysis-response-type-detection.md  story-3-7-response-caching-consistency-management.md  story-3-8-batch-processing-parallel-ai-calls.md
extension/: manifest.json
extension/background/: service-worker.js
extension/content/: content-script.js
extension/popup/: popup.css  popup.html  popup.js
gui/: main.py  requirements.txt
gui/windows/: __init__.py  main_window.py
scripts/: demo_epic2.py  generate_icons.py  test_epic2_manual.py
