[project]
name = "autoresumefiller"
version = "1.0.0"
description = "Intelligent job application form auto-filling with AI assistance"
authors = [
    {name = "Ragnar", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["job-application", "automation", "ai", "form-filling", "chrome-extension"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/yourusername/autoresumefiller"
Repository = "https://github.com/yourusername/autoresumefiller"
Issues = "https://github.com/yourusername/autoresumefiller/issues"
Documentation = "https://github.com/yourusername/autoresumefiller/blob/master/README.md"

[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "gui*"]
exclude = ["tests*", "*.tests*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests", "gui/tests", "tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = """
    -v
    --tb=short
    --strict-markers
    --cov=backend
    --cov=gui
    --cov-report=html
    --cov-report=term-missing:skip-covered
"""
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (moderate speed, external dependencies)",
    "e2e: End-to-end tests (slow, full system)",
    "slow: Tests that take >1s to run",
]

[tool.coverage.run]
source = ["backend", "gui"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/conftest.py",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\\.pyi?$'
extend-exclude = '''
/(
    \\.git
  | \\.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = "PyQt5.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "uvicorn.*"
ignore_missing_imports = true

[tool.pylint.main]
py-version = "3.9"
ignore = ["tests", ".venv", "build", "dist", "__pycache__"]
load-plugins = []

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring (too strict for small projects)
    "C0103",  # invalid-name (conflicts with common patterns like 'id', 'db')
    "R0903",  # too-few-public-methods (Pydantic models)
    "W0212",  # protected-access (needed for testing private methods)
]

[tool.pylint.format]
indent-string = "    "
expected-line-ending-format = "LF"

[tool.pylint.design]
max-args = 7
max-locals = 20
max-returns = 6
max-branches = 15
max-attributes = 12
